--- a/web-app/index.html
+++ b/web-app/index.html
@@ -14,13 +14,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <!--link rel="stylesheet" href="css/bootstrap.min.css"-->
+    <!--link rel="stylesheet" href="css/bootstrap-theme.min.css"-->
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/pocketgrid.css" />
 
     <link rel="stylesheet" href="css/base.css">
 
+    <script src="js/modernizr-2.6.2.min.js"></script>
+
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="lib/bootstrap.min.js"></script>
+    <!--script src="lib/bootstrap.min.js"></script-->
 
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-resource.min.js"></script>
