Main wrapper to html index

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -37,11 +37,14 @@
 </head>
 <body ng-app="app">
 
+<div class="main-wrap">
 
-<div ui-view></div>
+	<div ui-view></div>
 
-<div class="footer-container block-group">
-    <div class="footer block">Footer</div>
+	<div class="footer-container block-group">
+	    <div class="footer block">Footer</div>
+	</div>
+
 </div>
 
 </body>
