--- a/web-app/index.html
+++ b/web-app/index.html
@@ -23,6 +23,8 @@
 
     <script src="js/modernizr-2.6.2.min.js"></script>
 
+    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400' rel='stylesheet' type='text/css'>
+
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <!--script src="lib/bootstrap.min.js"></script-->
 
@@ -37,7 +39,7 @@
 </head>
 <body ng-app="app">
 
-<div class="main-wrap">
+<div class="">
 
 	<div ui-view></div>
 
