--- a/web-app/index.html
+++ b/web-app/index.html
@@ -46,8 +46,7 @@
 			<a href="http://localhost:8080/#/"><img src="images/logo.png" alt="InvestUs" /></a>
 	    </div>
 	    <div class="header-login block">
-			<!--a href="#/login"><button>Log in</button></a-->
-			<div class="logged-in">Logged in as <a href="#" class="profile">Kristjan-Julius Laak</a></div>
+			<!--div class="logged-in">Logged in as <a href="#" class="profile">Kristjan-Julius Laak</a></div-->
 	    </div>
 	</div>
 
