--- a/web-app/index.html
+++ b/web-app/index.html
@@ -46,6 +46,8 @@
 			<a href="http://localhost:8080/#/"><img src="images/logo.png" alt="InvestUs" /></a>
 	    </div>
 	    <div class="header-login block">
+			<a href="#/signup" class="sign-up-button"><button>Sign up</button></a>
+			 or <a href="#/login" class="log-in-link">log in</a>
 			<!--div class="logged-in">Logged in as <a href="#" class="profile">Kristjan-Julius Laak</a></div-->
 	    </div>
 	</div>
