--- a/web-app/index.html
+++ b/web-app/index.html
@@ -38,6 +38,7 @@
     <script src="js/directives.js"></script>
     <script src="js/factory.js"></script>
     <script src="js/service.js"></script>
+    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
 </head>
 <body ng-app="app">
