Logo to the footer

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -63,7 +63,9 @@
 	<div ui-view></div>
 
 	<div class="footer-container block-group">
-	    <div class="footer block">Make your money grow safely</div>
+	    <div class="footer block">
+        <img src="images/logo_footer.png" alt="logo" /><br />
+        Make your money grow safely</div>
 	    <div class="copyright block">InvestUs Inc. &copy; 2015 </div>
 	</div>
 
