--- a/web-app/index.html
+++ b/web-app/index.html
@@ -38,8 +38,10 @@
     <script src="js/directives.js"></script>
     <script src="js/factory.js"></script>
     <script src="js/service.js"></script>
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 
+    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="https://cdn.rawgit.com/novus/nvd3/v1.7.1/build/nv.d3.min.js"></script>
+    <script src="lib/angularjs-nvd3-directives.min.js"></script>
 </head>
 <body ng-app="app">
 
