--- a/web-app/index.html
+++ b/web-app/index.html
@@ -68,7 +68,7 @@
 
 	<div class="footer-container block-group">
 	    <div class="footer block">
-        <img src="images/logo_bottom.png" alt="logo" /><br />
+        <img src="images/logo_footer.png" alt="logo" /><br />
         Make your money grow safely</div>
 	    <div class="copyright block">InvestUs Inc. &copy; 2015 </div>
 	</div>
