--- a/web-app/index.html
+++ b/web-app/index.html
@@ -45,6 +45,15 @@
 </head>
 <body ng-app="app">
 
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/et_EE/sdk.js#xfbml=1&version=v2.3&appId=171594212900323";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 <div class="show-login" ng-controller="RootCtrl">
 	
 	<div class="main-wrap header block-group">
