--- a/web-app/index.html
+++ b/web-app/index.html
@@ -77,6 +77,13 @@
 
 	<div ui-view></div>
 
+    
+    <div class="main-wrap block-group">
+        <div class=" block" style="text-align: center; margin-top: 2em;">
+            <div class="fb-like" data-href="https://www.facebook.com/InvestUsEasy" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+        </div>
+    </div>
+
 	<div class="footer-container block-group">
 	    <div class="footer block">
         <img src="images/logo_footer.png" alt="logo" /><br />
@@ -85,6 +92,5 @@
 	</div>
 
 </div>
-
 </body>
 </html>
