--- a/web-app/index.html
+++ b/web-app/index.html
@@ -13,15 +13,15 @@
     <title>Grails & AngularJs base</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <!--link rel="stylesheet" href="css/bootstrap.min.css"-->
     <!--link rel="stylesheet" href="css/bootstrap-theme.min.css"-->
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/pocketgrid.css" />
+    <link rel="stylesheet" href="css/pocketgrid.css"/>
 
     <link rel="stylesheet" href="css/base.css">
 
-    <script src="js/modernizr-2.6.2.min.js"></script>
+    <script src="lib/modernizr-2.6.2.min.js"></script>
 
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700' rel='stylesheet' type='text/css'>
 
@@ -46,51 +46,55 @@
 <body ng-app="app">
 
 <div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/et_EE/sdk.js#xfbml=1&version=v2.3&appId=171594212900323";
-  fjs.parentNode.insertBefore(js, fjs);
+<script>(function (d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s);
+    js.id = id;
+    js.src = "//connect.facebook.net/et_EE/sdk.js#xfbml=1&version=v2.3&appId=171594212900323";
+    fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
 <div class="show-login" ng-controller="RootCtrl">
-	
-	<div class="main-wrap header block-group">
-	    <div class="logo block">
-			<a ui-sref="index"><img src="images/logo.png" alt="InvestUs" width="297" /></a>
-	    </div>
-	    <div class="header-login block" ng-switch="isAuthencticated()">
+
+    <div class="main-wrap header block-group">
+        <div class="logo block">
+            <a ui-sref="index"><img src="images/logo.png" alt="InvestUs" width="297"/></a>
+        </div>
+        <div class="header-login block" ng-switch="isAuthencticated()">
             <span ng-switch-when="false">
-                <a ui-sref="signup" class="sign-up-button"><button>Sign up</button></a>
+                <a ui-sref="signup" class="sign-up-button">
+                    <button>Sign up</button>
+                </a>
                  or <a ui-sref="login" class="log-in-link">log in</a>
             </span>
-			<div ng-switch-default class="logged-in">
+
+            <div ng-switch-default class="logged-in">
                 Logged in as <a href="#" class="profile">{{getUser()}}
                 <ul>
                     <li>Log out</li>
                 </ul>
-                </a>
+            </a>
             </div>
-	    </div>
-	</div>
-
-	<div ui-view></div>
-
-    
-    <div class="main-wrap block-group">
-        <div class=" block" style="text-align: center; margin-top: 2em;">
-            <div class="fb-like" data-href="https://www.facebook.com/InvestUsEasy" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
         </div>
     </div>
 
-	<div class="footer-container block-group">
-	    <div class="footer block">
-        <img src="images/logo_footer.png" alt="logo" /><br />
-        Make your money grow safely</div>
-	    <div class="copyright block">InvestUs Inc. &copy; 2015 </div>
-	</div>
+    <div ui-view></div>
 
+    <div class="main-wrap block-group">
+        <div class=" block" style="text-align: center; margin-top: 2em;">
+            <div class="fb-like" data-href="https://www.facebook.com/InvestUsEasy" data-layout="standard" data-action="like" data-show-faces="true"
+                 data-share="true"></div>
+        </div>
+    </div>
+
+    <div class="footer-container block-group">
+        <div class="footer block">
+            <img src="images/logo_footer.png" alt="logo"/><br/>
+            Make your money grow safely
+        </div>
+        <div class="copyright block">InvestUs Inc. &copy; 2015</div>
+    </div>
 </div>
 </body>
 </html>
