Now investments are user specific. Logout kind of does something and fullname is shown instead of email

--- a/web-app/index.html
+++ b/web-app/index.html
@@ -70,9 +70,9 @@
             </span>
 
             <div ng-switch-default class="logged-in">
-                Logged in as <a href="#" class="profile">{{getUser()}}
+                Logged in as <a href="#" class="profile">{{getUser().fullName}}
                 <ul>
-                    <li>Log out</li>
+                    <li ng-click="logOut()">Log out</li>
                 </ul>
             </a>
             </div>
